k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab1
  labels:
    name: lab1
    course: reliability-engineering
