k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab1-ingress
  namespace: lab1
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: orders-api
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: orders-api
            port:
              number: 80
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: orders-api
            port:
              number: 80
